--- a/css/style.css
+++ b/css/style.css
@@ -634,19 +634,19 @@ body {
   height: 55rem;
   margin-right: 3rem;
   position: relative;
-  overflow: hidden; }
+  overflow: hidden;
+  display: inline-block; }
   .case_item:not(:last-child) {
     margin-right: 3rem; }
 
 .case_image {
   width: 100%;
   height: 100%;
-  display: inline-block;
   background-position: 100%;
   transition: ease all .3s; }
   .case_image:hover {
     transform: scale(1.1); }
-  .case_image:hover ~ .case_heading-top {
+  .case_image:hover.case_heading-top {
     transform: translateY(-1rem); }
 
 .case_heading-top {
