--- a/sass/pages/home.sass
+++ b/sass/pages/home.sass
@@ -117,6 +117,7 @@
     margin-right: $gutter-lr
     position: relative
     overflow: hidden
+    display: inline-block
 
     &:not(:last-child)
         margin-right: $gutter-lr
@@ -124,14 +125,13 @@
 .case_image 
     width: 100%
     height: 100%
-    display: inline-block
     background-position: 100%
     transition: ease all .3s
 
     &:hover
         transform: scale(1.1)
 
-    &:hover ~ .case_heading-top
+    &:hover.case_heading-top
         transform: translateY(-1rem)
     
 .case_heading-top
