--- a/sass/abstracts/_mixins.sass
+++ b/sass/abstracts/_mixins.sass
@@ -25,12 +25,17 @@
   
 
 @mixin desktop-medium() 
-   @media only screen and (min-width: 992px)
+   @media only screen and (min-width: 1440px)
     @content
 
 
 @mixin desktop-large() 
    @media only screen and (min-width: 1440px)
+    @content
+
+
+@mixin breakpoint_md() 
+   @media only screen and (max-width: 1140px)
     @content
   
 
