--- a/sass/base/_base.sass
+++ b/sass/base/_base.sass
@@ -29,6 +29,9 @@ body
   h2 
     font-size: 4rem
 
+  h3
+    font-size: 3rem
+
   p
     font-size: 1.6rem
     font-family: 'Poppins', sans-serif
