--- a/sass/components/_header.sass
+++ b/sass/components/_header.sass
@@ -6,7 +6,7 @@
     z-index: 100
 
     &_logo
-       background-image: url('/Users/marcuskarlsson/Code/code-personal/codebet/img/codebet_org_cmyk.svg')
+       background-image: url('../img/codebet_org_cmyk.svg')
        background-repeat: no-repeat
        background-size: contain
        width: 23rem
@@ -98,6 +98,9 @@
         background-color: $font_color--primary
     
     +mobile
+        background-color: $font_color--primary
+
+    +hide_menu
         background-color: $font_color--primary
     
 
