--- a/sass/pages/home.sass
+++ b/sass/pages/home.sass
@@ -234,7 +234,7 @@ $info_section--margin: 5rem
 
 .info_section
     text-align: left
-    padding: 7rem 0 0 0
+    padding: 7rem 0
     
     +mobile 
         padding: 0 0 0 0
@@ -249,7 +249,6 @@ $info_section--margin: 5rem
 
     &--heading
         color: rgba(0,0,0, .75)
-        margin-top: $info_section--margin
         margin-bottom: $info_section--margin / 2
         font-size: 4rem
 
@@ -263,7 +262,7 @@ $info_section--margin: 5rem
         +mobile 
             line-height: 150%
     img 
-        margin: 5rem 4rem 12rem 0rem
+        margin: 5rem 4rem 0rem 0rem
         transition: .3s ease all
 
         +mobile 
