--- a/sass/components/_footer.sass
+++ b/sass/components/_footer.sass
@@ -1,57 +1,23 @@
 .footer
+    padding: 15rem 5rem
+    display: flex
+    justify-content: space-around
     background-color: $dark-grey
     margin: 0 auto
     color: white
     width: 100%
-    overflow: hidden
     position: relative
 
-    &::before
-        content: ""
-        position: absolute
-        width: 100%
-        border: 1px solid $dark-grey
-        top: -4rem
-        left: 0 
+    +tablet
+        flex-direction: column
 
-    &::after
-        content: ""
-        position: absolute
-        width: 100%
-        height: 100%
-        background-image: url('/Users/marcuskarlsson/Code/code-personal/stele/img/pattern.png')
-        background-repeat: no-repeat
+    &-col-1-4
+        p
+            margin-bottom: 1rem
 
-
-    &_logo
-        background-image: url('/Users/marcuskarlsson/Code/code-personal/stele/img/logo_white.svg')
-        background-size: contain
-        background-repeat: no-repeat
-        height: 10%
-
-        +tablet 
-            height: 20%
-
-    &_heading
-        color: $orange
-        margin-bottom: 1rem
-
-        +tablet
-            margin: 4rem 0 2rem 0
-
-    &_menu
-        text-decoration: none
-        list-style: none
-
-        +tablet
-            margin: 0 0 4rem 0
-
-        &--items
-            padding: .5rem 0
-
-.below_footer
-    width: 100%
-    background-color: darken($dark-grey, 2%)
-    color: rgba(255, 255, 255, .2)
-    padding: 2rem 7rem
-    font-weight: light 
+            &:not(:first-of-type)
+                opacity: .8
+        
+        i
+            font-size: 1.8rem
+            color: white
