--- a/css/style.css
+++ b/css/style.css
@@ -26,7 +26,10 @@ body {
   overflow-x: hidden; }
   body a {
     text-decoration: none;
-    color: #F2994A; }
+    color: #ff2356;
+    transition: .15s ease all; }
+    body a:hover {
+      color: #D50032; }
   body h2 {
     font-size: 4rem; }
   body h3 {
@@ -153,10 +156,11 @@ body {
     margin-right: 5rem; }
 
 .hamburger {
-  display: inline-flex;
-  align-items: center;
   cursor: pointer;
-  z-index: 999; }
+  z-index: 999;
+  position: absolute;
+  top: 4rem;
+  right: 4rem; }
   .hamburger p {
     margin-right: 10px;
     color: #1e1e1e; }
@@ -227,13 +231,13 @@ body {
   padding: 2rem;
   background-color: #D50032;
   border-top: 1px solid black;
-  z-index: 998;
+  z-index: 6;
   text-align: center;
   transform: translateX(550rem);
   transition: cubic-bezier(0, 0.45, 0, 0.93) 0.4s; }
   @media only screen and (max-width: 768px) {
     .mobile_menu {
-      width: 80%; } }
+      width: 100%; } }
   .mobile_menu--item {
     list-style: none;
     display: block;
@@ -455,55 +459,24 @@ body {
   margin: 7rem auto 5rem auto; }
 
 .footer {
+  padding: 15rem 5rem;
+  display: flex;
+  justify-content: space-around;
   background-color: #1e1e1e;
   margin: 0 auto;
   color: white;
   width: 100%;
-  overflow: hidden;
   position: relative; }
-  .footer::before {
-    content: "";
-    position: absolute;
-    width: 100%;
-    border: 1px solid #1e1e1e;
-    top: -4rem;
-    left: 0; }
-  .footer::after {
-    content: "";
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    background-image: url("/Users/marcuskarlsson/Code/code-personal/stele/img/pattern.png");
-    background-repeat: no-repeat; }
-  .footer_logo {
-    background-image: url("/Users/marcuskarlsson/Code/code-personal/stele/img/logo_white.svg");
-    background-size: contain;
-    background-repeat: no-repeat;
-    height: 10%; }
-    @media only screen and (max-width: 768px) {
-      .footer_logo {
-        height: 20%; } }
-  .footer_heading {
-    color: #F2994A;
+  @media only screen and (max-width: 768px) {
+    .footer {
+      flex-direction: column; } }
+  .footer-col-1-4 p {
     margin-bottom: 1rem; }
-    @media only screen and (max-width: 768px) {
-      .footer_heading {
-        margin: 4rem 0 2rem 0; } }
-  .footer_menu {
-    text-decoration: none;
-    list-style: none; }
-    @media only screen and (max-width: 768px) {
-      .footer_menu {
-        margin: 0 0 4rem 0; } }
-    .footer_menu--items {
-      padding: .5rem 0; }
-
-.below_footer {
-  width: 100%;
-  background-color: #191919;
-  color: rgba(255, 255, 255, 0.2);
-  padding: 2rem 7rem;
-  font-weight: light; }
+    .footer-col-1-4 p:not(:first-of-type) {
+      opacity: .8; }
+  .footer-col-1-4 i {
+    font-size: 1.8rem;
+    color: white; }
 
 .row {
   margin: 0 auto;
@@ -707,7 +680,11 @@ body {
 .case {
   position: relative;
   background-color: #f5f6f7;
-  width: 100%; }
+  width: 100%;
+  padding: 12rem 7rem 17rem 7rem; }
+  .case-project {
+    width: 100%;
+    position: relative; }
 
 .case_item_wrapper {
   width: 100%;
@@ -729,19 +706,19 @@ body {
   overflow: hidden;
   display: inline-block;
   transition: 0.3s all cubic-bezier(0.68, -0.55, 0.265, 1.55); }
-  .case_item:hover > .case .case_heading-bottom {
+  .case_item:hover > .case-project .case_heading-bottom {
     transform: translateY(-2.5rem); }
-  .case_item:hover > .case .case_paragraph {
+  .case_item:hover > .case-project .case_paragraph {
     visibility: visible;
     transform: translateY(0rem);
     opacity: 1; }
   .case_item:not(:last-child) {
     margin-right: 3rem; }
   .case_item:hover > .case_image {
-    transform: scale(1.05) rotate(-2deg);
+    transform: scale(1.05) rotate(0deg);
     opacity: 1; }
   .case_item:hover > .case_image:after {
-    background-image: linear-gradient(to top left, rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.1)); }
+    background-image: linear-gradient(to top, rgba(0, 0, 0, 0.7), rgba(213, 0, 50, 0)); }
   @media only screen and (max-width: 1140px) {
     .case_item:nth-child(2) {
       margin-right: 0; } }
@@ -766,7 +743,8 @@ body {
   height: 100%;
   background-position: 100%;
   transition: ease all .3s;
-  opacity: .8; }
+  opacity: .8;
+  backface-visibility: hidden; }
   .case_image:after {
     content: '';
     position: absolute;
@@ -775,7 +753,7 @@ body {
     height: 100%;
     width: 100%;
     background-image: linear-gradient(to top left, rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.1));
-    transition: .5s ease all; }
+    transition: .3s ease all; }
 
 .case_heading-top {
   color: white;
@@ -808,12 +786,11 @@ body {
 
 .info_section {
   text-align: left;
-  padding: 7rem 0; }
+  padding: 9rem 0; }
   @media only screen and (max-width: 420px) {
     .info_section {
       padding: 0 0 0 0; } }
   .info_section-wrapper {
-    margin-top: 3rem;
     background-color: white;
     padding: 5rem; }
     @media only screen and (max-width: 420px) {
@@ -821,14 +798,16 @@ body {
         margin-top: 0rem; } }
   .info_section--heading {
     color: rgba(0, 0, 0, 0.75);
-    margin-bottom: 2.5rem;
-    font-size: 4rem; }
+    margin-bottom: 3.33333rem;
+    font-size: 5rem;
+    font-weight: 900;
+    line-height: 130%; }
     @media only screen and (max-width: 420px) {
       .info_section--heading {
         margin-top: 2rem; } }
   .info_section--paragraph {
-    color: rgba(0, 0, 0, 0.75);
-    font-size: 1.8rem;
+    color: rgba(0, 0, 0, 0.55);
+    font-size: 2rem;
     line-height: 200%; }
     @media only screen and (max-width: 420px) {
       .info_section--paragraph {
