--- a/sass/main.sass
+++ b/sass/main.sass
@@ -9,6 +9,7 @@
 @import "base/typography"
 
 @import "components/header"
+@import "components/arrow"
 @import "components/video"
 @import "components/buttons"
 @import "components/slider"
