--- a/sass/components/_footer.sass
+++ b/sass/components/_footer.sass
@@ -11,13 +11,44 @@
     +tablet
         flex-direction: column
 
-    &-col-1-4
+    &-col-2-3
+        width: 33%
+
+        +tablet 
+            width: 100%
         p
             margin-bottom: 1rem
+            opacity: .6
 
             &:not(:first-of-type)
-                opacity: .8
-        
+                opacity: 1
+
+
+    &-col-1-3
+        p
+            margin-bottom: 1rem
+            opacity: .6
+
+            &:not(:first-of-type)
+                opacity: 1
+    
+.icons
+    a 
         i
-            font-size: 1.8rem
+            font-size: 3rem
             color: white
+            transition: .3s ease all
+            display: inline-block
+            backface-visibility: hidden
+            margin: 1.5rem 1.5rem 0 0
+            -webkit-font-smoothing: antialiased;
+            
+            &:not(:last-child)
+                margin: 1.5rem 1.5rem 0 0
+
+            &:hover
+                transform: translateY(-2px)
+
+            +tablet 
+                display: block
+                margin: 1.5rem 0
