--- a/sass/pages/home.sass
+++ b/sass/pages/home.sass
@@ -48,7 +48,7 @@
             z-index: 5
             position: absolute
             top: 50%
-            transform: translateY(calc(-50% - 9rem))
+            transform: translateY(-50%)
                 
             &--text
                 color: $font_color--primary
@@ -83,7 +83,7 @@
         font-size: 3.5rem
     
     +mobile
-        font-size: 2.5rem
+        font-size: 3rem
 
 .hero_font--medium
     font-size: 3rem
@@ -109,16 +109,19 @@
     animation: fadein--slow .5s;
 
     +tablet
-        font-size: 2rem
+        font-size: 3rem
         margin-bottom: 2rem
 
 //CASE
 
 .case
     position: relative
-    background-color: #f5f6f7
+    background-color: white
     width: 100%
-    padding: 12rem 7rem 17rem 7rem
+    padding: 7rem 7rem 12rem 7rem
+
+    +tablet 
+        padding: 7rem 2rem 12rem 2rem;
 
     &-project
         width: 100%
@@ -154,12 +157,16 @@
             visibility: visible
             transform: translateY(0rem)
             opacity: 1
+    
+    &:hover > .case-project 
+        .arrow-icon
+            transform: translateX(5px)
 
     &:not(:last-child)
         margin-right: $gutter-lr
 
     &:hover > .case_image
-        transform: scale(1.05) rotate(0deg)
+        transform: scale(1.02)
         opacity: 1
     
     &:hover > .case_image:after
@@ -189,7 +196,7 @@
     width: 100%
     height: 100%
     background-position: 100%
-    transition: ease all .3s
+    transition: ease all .7s
     opacity: .8
     backface-visibility: hidden
 
@@ -220,7 +227,7 @@
     position: absolute
     bottom: 4rem
     left: 4rem
-    transition: .3s all cubic-bezier(0.68, -0.55, 0.265, 1.55)
+    transition: .5s all cubic-bezier(0.68, -0.55, 0.265, 1.55)
 
 .case-text
 
@@ -231,7 +238,7 @@
     visibility: hidden
     transform: translateY(2rem)
     color: white
-    transition: .3s all cubic-bezier(0.68, -0.55, 0.265, 1.55)
+    transition: .5s all cubic-bezier(0.68, -0.55, 0.265, 1.55)
     opacity: 0
 
 //INFO-SECTION
@@ -246,7 +253,7 @@ $info_section--margin: 5rem
         padding: 0 0 0 0
 
     &-wrapper
-        background-color: white
+        background-color: #f5f6f7
         padding: $info_section--margin
 
         +mobile 
