--- a/css/style.css
+++ b/css/style.css
@@ -21,7 +21,7 @@ body {
   color: rgba(0, 0, 0, 0.65);
   background-color: #fff;
   height: 100%;
-  max-width: 192rem;
+  width: 100%;
   box-sizing: border-box;
   overflow-x: hidden; }
   body a {
@@ -462,33 +462,38 @@ body {
   text-transform: uppercase;
   margin: 7rem auto 5rem auto; }
 
-.footer {
+.footer_wrapper {
+  background-color: #1e1e1e; }
+
+.footer_container {
   padding: 15rem 5rem;
   display: flex;
   justify-content: space-around;
-  background-color: #1e1e1e;
   margin: 0 auto;
   color: white;
   width: 100%;
   position: relative; }
+
+@media only screen and (max-width: 768px) {
+  .footer {
+    flex-direction: column; } }
+
+.footer-col-2-3 {
+  width: 33%; }
   @media only screen and (max-width: 768px) {
-    .footer {
-      flex-direction: column; } }
-  .footer-col-2-3 {
-    width: 33%; }
-    @media only screen and (max-width: 768px) {
-      .footer-col-2-3 {
-        width: 100%; } }
-    .footer-col-2-3 p {
-      margin-bottom: 1rem;
-      opacity: .6; }
-      .footer-col-2-3 p:not(:first-of-type) {
-        opacity: 1; }
-  .footer-col-1-3 p {
+    .footer-col-2-3 {
+      width: 100%; } }
+  .footer-col-2-3 p {
     margin-bottom: 1rem;
     opacity: .6; }
-    .footer-col-1-3 p:not(:first-of-type) {
+    .footer-col-2-3 p:not(:first-of-type) {
       opacity: 1; }
+
+.footer-col-1-3 p {
+  margin-bottom: 1rem;
+  opacity: .6; }
+  .footer-col-1-3 p:not(:first-of-type) {
+    opacity: 1; }
 
 .icons a i {
   font-size: 3rem;
