--- a/sass/components/_footer.sass
+++ b/sass/components/_footer.sass
@@ -1,12 +1,15 @@
 .footer
-    padding: 15rem 5rem
-    display: flex
-    justify-content: space-around
-    background-color: $dark-grey
-    margin: 0 auto
-    color: white
-    width: 100%
-    position: relative
+
+    &_wrapper
+        background-color: $dark-grey
+    &_container
+        padding: 15rem 5rem
+        display: flex
+        justify-content: space-around
+        margin: 0 auto
+        color: white
+        width: 100%
+        position: relative
 
     +tablet
         flex-direction: column
