--- a/sass/base/_base.sass
+++ b/sass/base/_base.sass
@@ -18,7 +18,7 @@ body
   color: rgba(0,0,0,.65)
   background-color: #fff
   height: 100%
-  max-width: 192rem
+  width: 100%
   box-sizing: border-box
   overflow-x: hidden
 
